[package]
name = "elytra"
license = "MIT"
description = "A typesafe OGM for Bolt + openCypher graph databases."
authors = ["Samuel Oliveira"]
categories = ["database", "data-structures"]
homepage = "https://github.com/samdevbr/elytra"
repository = "https://github.com/samdevbr/elytra"
version = "0.1.0"
edition = "2021"

[dependencies]
